src/objects/sma__MALocation__c.object
<CustomObject>
    <fields>
        <fullName>sma__Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sma__DateTime__c</fullName>
        <label>Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sma__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__FavoriteMarker__c</fullName>
        <label>Favorite Marker</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sma__Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Folder</label>
        <referenceTo>sma__MALocationFolder__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__IsEnd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is End</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__IsSchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__IsStart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__MapAnythingFolder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MapAnything Folder</label>
        <referenceTo>sma__MAFolder__c</referenceTo>
        <relationshipLabel>MapAnything Locations</relationshipLabel>
        <relationshipName>MapAnythingLocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__ResourceId__c</fullName>
        <label>Resource Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MALocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MapAnything Location</label>
    <listViews>
        <fullName>sma__All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>sma__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>